<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosPersonales">


    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:text="@string/Titulo_personales"
        android:textColor="@android:color/background_dark"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_apellidoPaterno"
        app:layout_constraintEnd_toEndOf="@+id/txt_titulo"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <EditText
        android:id="@+id/txt_apellidoPaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_apellidoPaterno"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_apellidoMaterno"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <EditText
        android:id="@+id/txt_apellidoMaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_apellidoMaterno"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_edad"
        app:layout_constraintEnd_toEndOf="@+id/txt_apellidoPaterno"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_apellidoPaterno"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellidoPaterno" />

    <EditText
        android:id="@+id/txt_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_edad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txt_apellidoMaterno"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_apellidoMaterno"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellidoMaterno" />

    <TextView
        android:id="@+id/txt_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sexo"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_edad"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="40dp"
        android:onClick="Enviar"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/txt_edad"
        app:layout_constraintStart_toStartOf="@+id/txt_edad"
        app:layout_constraintTop_toBottomOf="@+id/txt_sexo">

        <RadioButton
            android:id="@+id/rdb_mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb_mujer"
            android:textColor="@android:color/darker_gray"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/rdb_hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb_hombre"
            android:textColor="@android:color/darker_gray"
            android:textSize="18dp" />
    </RadioGroup>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Atras"
        android:text="@string/boton_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>